styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    box-sizing: border-box;
    font-family: roboto;
}

h1,
h2,
h6,
h5,
ul,
body{
    margin: 0;
}

ul{
    list-style-type: none;
}


button {
    background-color: #3882F6;
    color: #fff;
    border-radius: 4px;
    border-width: 0;
    padding: 6px 24px;
}

.footer, 
.first-section,
.header {
    background-color: #1f2937;
    color: #e5e7eb;
}

.header,
.logo,
.first-section,
.second-section,
.third-section,
.fourth-section,
.footer {
    display: flex;
}

.first-section,
.second-section,
.third-section,
.fourth-section {
    justify-content: center;
    align-items: center;
}

.first-section,
.second-section,
.third-section {
    height: 500px;
}

.header {
    justify-content: space-between;
    align-items: center;
    height: 36px;
    padding: 20px 12vw;
}

.logo{
    justify-content: space-between;
    align-items: center;
    width: 330px;
}

.header img {
    padding: 2px 0 2px 0;
}

h3 {
    font-size: 28px;
    font-weight: 900;
    color: #E5E7EB;
}

.logo{
    justify-content: space-between;
}

.first-section {
    padding: 0 12vw;
    justify-content: space-between;
    gap: 20px;
}

h1 {
    font-size: 96px;
    font-weight: 900;
    color: #F9FAF8;
}

.first-section div div {
    width: 450px;
}

.first-section div button {
    margin-top: 10px;
}

.placeholder {
    background-color: #808286; 
    width: 450px;
    height: auto;
}

.first-section div div {
    font-size: 18px;
    color: #E5E7EB;
}

.links {
    display: flex;
    gap: 8px;
}


.second-section {
    flex-direction: column;
    justify-content: space-between;
    padding: 30px 0 50px 0;
}

h2 {
    font-size: 36px;
    color:#1f2937;
    font-weight: 900;
}

.cards{
    display: flex;
    gap: 25px;
}

.subtext {
    text-align: center;
}

.card {
    display: flex;
    flex-direction: column;
    width: 250px;
}

.third-section {
   background-color: #E5E7EB; 
   flex-direction: column;
   padding: 0 250px;
}

.quote {
    width: 60vw;
    font-size: 36px;
    font-weight: 200;
    font-style: italic;
}

h6 {
    font-size: 36px;
    align-self: flex-end;
    padding-right: 50px;
}

.fourth-section {
    height: 300px;
}
.box {
    background-color: #3882F6;
    color: white;
    border-radius: 10px;
    width: 70vw;
    height: 100px;
    display: flex;
    padding: 20px 50px;
    align-items: center;
    justify-content: space-between;
}

.box button {
    border-width: 1px;
    border-color: #fff;
}

.footer {
    height: 100px;
    align-items: center;
    justify-content: center;
}

